<resources>
    <string name="app_name">ePITAPH</string>
    <!--   OPENING MENU STRINGS     -->
    <string name="creatememorial">Create Memorial</string>
    <string name="visitmemorial">Visit Memorial</string>

    <!--   VISIT MENU STRINGS     -->
    <string name="savedmemorials">Saved Memorials</string>
    <string name="memorialcode">Enter Memorial Code</string>
    <string name="localmemorials">Browse Local Memorials</string>

    <!--   CREATE MEMORIAL STRINGS     -->
    <string name="name">Name of Loved One</string>
    <string name="entername">Enter name...</string>
    <string name="years">Years of Birth and Death</string>
    <string name="birthyear">Birth year...</string>
    <string name="deathyear">Death year...</string>
    <string name="gender">Gender of Loved One</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="nonbinary">Nonbinary</string>
    <string name="epitaph">Memorial Epitaph</string>
    <string name="enterepitaph">Enter epitaph...</string>
    <string name="description">Memorial Description</string>
    <string name="enterdesc">Enter description...</string>
    <string name="mainimage">Main Photo</string>
    <string name="visibility">Memorial Visibility</string>
    <string name="keepprivate">Keep my memorial private</string>
    <string name="commentpermissions">Comment Permissions</string>
    <string name="contributionpermissions">Contribution Permissions</string>
    <string name="nocomments">No Comments</string>
    <string name="nocontributions">No Contributions</string>
    <string name="myapproval">My Approval</string>
    <string name="open">Open</string>
    <string name="location">Add Memorial Location</string>
    <string name="usemine">My Current Location</string>
    <string name="entercity">Enter City</string>
    <string name="postmemorial">Post Memorial</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saved_memorials">Saved Memorials</string>
    <string name="enter_memorial_code">Enter Memorial Code</string>
    <string name="browse_local_memorials">Browse Local Memorials</string>
    <string name="memorial_id">Memorial ID</string>
    <string name="go_to_memorial">Go To Memorial</string>
    <string name="your_comment_text">Your comment text...</string>
    <string name="copy_memorial_id">Copy Memorial ID</string>
    <string name="like">Like</string>
    <string name="report">Report</string>
    <string name="save_memorial">Save Memorial</string>
    <string name="title_activity_comment_view">CommentViewActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>