<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateMemorialFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/entername"
                    app:layout_constraintStart_toStartOf="@+id/rg_gender"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_name" />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_gender">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/rb_nonbinary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nonbinary" />
                </RadioGroup>

                <TextView
                    android:id="@+id/tv_epitaph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/epitaph"
                    app:layout_constraintStart_toStartOf="@+id/et_name"
                    app:layout_constraintTop_toBottomOf="@+id/rg_gender" />

                <EditText
                    android:id="@+id/et_epitaph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    app:layout_constraintStart_toStartOf="@+id/et_description"
                    app:layout_constraintTop_toBottomOf="@+id/tv_epitaph" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    app:layout_constraintStart_toStartOf="@+id/tv_epitaph"
                    app:layout_constraintTop_toBottomOf="@+id/et_epitaph" />

                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    app:layout_constraintStart_toStartOf="@+id/tv_description"
                    app:layout_constraintTop_toBottomOf="@+id/tv_description" />

                <TextView
                    android:id="@+id/tv_memorialimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainimage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_description" />

                <ImageButton
                    android:id="@+id/ib_memorialimage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_memorialimage"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visibility"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ib_memorialimage" />

                <CheckBox
                    android:id="@+id/cb_private"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keepprivate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_visibility" />

                <TextView
                    android:id="@+id/tv_commentpermissions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/commentpermissions"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cb_private" />

                <RadioGroup
                    android:id="@+id/rg_commentpermissions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_commentpermissions">

                    <RadioButton
                        android:id="@+id/rb_nocomments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nocomments" />

                    <RadioButton
                        android:id="@+id/rb_myApproval"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/myapproval" />

                    <RadioButton
                        android:id="@+id/rb_open"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/open" />
                </RadioGroup>

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creatememorial"
                    app:layout_constraintTop_toBottomOf="@+id/rg_commentpermissions" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>