<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MemorialConfirmFragment">

    <TextView
        android:id="@+id/tv_memorialcreated"
        style="@style/headerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/enterMemorialCodeEdit"
        android:text="@string/enter_memorial_code"
        android:fontFamily="@font/avenir"
        />


    <TextView
        android:id="@+id/tv_memorialcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_memorialcreated"
        app:layout_constraintBottom_toTopOf="@id/btn_gotomemorial"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="number"
        android:hint="@string/memorial_id"
        android:fontFamily="@font/avenir"
        />

    <Button
        android:id="@+id/btn_gotomemorial"
        style="@style/buttonStyle"
        app:layout_constraintTop_toBottomOf="@+id/tv_memorialcode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/go_to_memorial"
        android:onClick="onGotoMemorialClick"
        android:fontFamily="@font/avenir"
        />

</FrameLayout>