<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_mid">

    <TextView
        android:id="@+id/enterMemorialCodeText"
        style="@style/headerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/enterMemorialCodeEdit"
        android:text="@string/enter_memorial_code"
        android:fontFamily="@font/avenir"
        />


    <EditText
        android:id="@+id/enterMemorialCodeEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enterMemorialCodeText"
        app:layout_constraintBottom_toTopOf="@id/enterMemorialCodeButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="number"
        android:hint="@string/memorial_id"
        android:fontFamily="@font/avenir"
        />

    <Button
        android:id="@+id/enterMemorialCodeButton"
        style="@style/buttonStyle"
        app:layout_constraintTop_toBottomOf="@id/enterMemorialCodeEdit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/go_to_memorial"
        android:onClick="onGotoClick"
        android:fontFamily="@font/avenir"
        />

</androidx.constraintlayout.widget.ConstraintLayout>