<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_entercode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/purple_dark"
        android:text="@string/memorialcode"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_browselocal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_savedmemorials" />

    <Button
        android:id="@+id/btn_savedmemorials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="254dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="144dp"
        android:backgroundTint="@color/purple_dark"
        android:text="@string/savedmemorials"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_browselocal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_browselocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="446dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="237dp"
        android:backgroundTint="@color/purple_dark"
        android:text="@string/localmemorials"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>